fixes to color gen, updated tests, basic styling

--- a/test/all/index.html
+++ b/test/all/index.html
@@ -5,10 +5,11 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js'></script>
     <script src='../../angle.js'></script>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='../style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1>AngleCharts Test: Visual inspection of all charts</h1>
+    <h1>AngleCharts BIG Test</h1>
     <h3>Palette</h3>
     <div id='palette'></div>
     <h3>Angle.BarChart</h3>
